# python_applications

./: README.md  band_generator.py  jokempo.py  minigame.py  selic_tax.py  tip_calculator.py
ProjetoDjango/: TutorialDJANGO_Matumoto  pyproject.toml
ProjetoDjango/Pesquisa/mysite/: config.py  settings.py  urls.py
ProjetoDjango/Pesquisa/polls/: models.py  tests.py  urls.py  views.py
ProjetoDjango/Pesquisa/polls/migrations/: 0001_initial.py
ProjetoDjango/Pesquisa/polls/static/polls/: style.css
ProjetoDjango/Pesquisa/polls/templates/polls/: detail.html  index.html  results.html
